--- a/sdk/python/pyproject.toml
+++ b/sdk/python/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
 ]
 requires-python = ">=3.10"
 readme = "README.md"
-license = {text = "Apache"}
+license = {text = "Apache-2.0"}
 
 [build-system]
 requires = ["pdm-backend"]
@@ -27,3 +27,6 @@ dev = [
     "pytest>=8.3.3",
     "pytest-asyncio>=0.24.0",
 ]
+
+[tool.pdm.publish]
+repository = "pypi"
