don't check format of generated files

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,10 +52,8 @@ jobs:
         args: -- -D warnings
 
     - name: Check formatting
-      uses: actions-rs/cargo@v1
-      with:
-        command: fmt
-        args: --all -- --check
+      run: |
+        cargo fmt -- --check $(find . -name '*.rs' -type f | grep -v "/generated/")
 
     - name: Debug log
       if: ${{ github.event.inputs.debug_enabled == 'true' }}
@@ -64,3 +62,6 @@ jobs:
         # 在这里添加您想要的任何额外的调试命令
         cargo --version
         rustc --version
+        echo "Files being checked for formatting:"
+        find . -name '*.rs' -type f | grep -v "/generated/"
+
