--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,12 @@ hex = "0.4.3"
 serde_json = "1.0.128"
 bollard = "0.17.1"
 prpc = "0.2.1"
+x509-parser = "0.16.0"
+bon = "2.2.1"
+p256 = "0.13.2"
+ring = "0.17.8"
+rustls-pki-types = "1.8.0"
+elliptic-curve = { version = "0.13.8", features = ["pkcs8"] }
 
 [workspace]
 members = ["rpc"]
