--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,15 @@ elliptic-curve = { version = "0.13.8", features = ["pkcs8"] }
 [workspace]
 members = ["rpc"]
 
+[profile.release]
+opt-level = 3
+lto = true
+codegen-units = 1
+panic = 'abort'
+debug = false
+
+[target.'cfg(target_os = "linux")'.dependencies]
+openssl = { version = "0.10", features = ["vendored"] }
+
+[target.'cfg(target_env = "musl")'.dependencies]
+openssl = { version = "0.10", features = ["vendored"] }
