--- a/sdk/js/package.json
+++ b/sdk/js/package.json
@@ -4,6 +4,17 @@
   "description": "DStack SDK",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "exports": {
+    ".": "./dist/index.js",
+    "./viem": {
+      "import": "./dist/viem.js",
+      "require": "./dist/viem.js",
+      "types": "./dist/viem.d.ts"
+    }
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "build": "tsc",
     "test": "vitest",
@@ -15,7 +26,18 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@types/node": "latest",
-    "typescript": "^4.2.2",
+    "typescript": "latest",
     "vitest": "^2.1.3"
+  },
+  "optionalDependencies": {
+    "viem": "^2.21.0 <3.0.0"
+  },
+  "peerDependencies": {
+    "viem": "^2.21.0 <3.0.0"
+  },
+  "peerDependenciesMeta": {
+    "viem": {
+      "optional": true
+    }
   }
 }
