--- a/dcap-attestation/pyproject.toml
+++ b/dcap-attestation/pyproject.toml
@@ -16,6 +16,9 @@ dependencies = [
     "python-dotenv>=1.0.1",
     "uvicorn>=0.32.0",
     "python-multipart>=0.0.12",
+    "sqlalchemy>=2.0.36",
+    "psycopg2-binary>=2.9.10",
+    "unicorn[standard]>=2.1.1",
 ]
 requires-python = "==3.10.*"
 readme = "README.md"
@@ -23,3 +26,6 @@ license = {text = "Apache 2.0"}
 
 [tool.pdm]
 distribution = true
+
+[tool.pdm.scripts]
+start = "uvicorn main:app --reload"
