--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ scale = { package = "parity-scale-codec", version = "3.6.5", default-features = 
     "derive",
 ] }
 reqwest = "0.12.8"
+sha3 = "0.10.8"
 
 [workspace]
 members = ["rpc"]
