--- a/dcap-attestation/pyproject.toml
+++ b/dcap-attestation/pyproject.toml
@@ -19,6 +19,8 @@ dependencies = [
     "sqlalchemy>=2.0.36",
     "psycopg2-binary>=2.9.10",
     "unicorn[standard]>=2.1.1",
+    "cryptography>=44.0.0",
+    "pyasn1>=0.6.1",
 ]
 requires-python = "==3.10.*"
 readme = "README.md"
